--- a/index.html
+++ b/index.html
@@ -10,3 +10,5 @@
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+cp -r build/* .
+cp -r build/* . && cp -r build/static ./
