still trying to fix zoom

--- a/index.html
+++ b/index.html
@@ -11,16 +11,23 @@
       rel="stylesheet"
     />
 
-    <!-- Zoom Reset Script -->
+    <!-- Zoom Reset Script (Safari-compatible) -->
     <script>
       window.addEventListener('load', () => {
         const meta = document.querySelector('meta[name="viewport"]');
         if (meta) {
-          meta.setAttribute('content', 'width=device-width, initial-scale=1.01');
+          const original = meta.getAttribute('content');
+          meta.setAttribute('content', 'width=device-width, initial-scale=1.01, maximum-scale=10.0, user-scalable=yes');
           setTimeout(() => {
-            meta.setAttribute('content', 'width=device-width, initial-scale=1.0');
-          }, 0);
+            meta.setAttribute('content', original || 'width=device-width, initial-scale=1.0, maximum-scale=10.0, user-scalable=yes');
+          }, 100);
         }
+
+        // Safari: force reflow to apply zoom reset
+        document.body.style.transform = 'scale(1.0001)';
+        setTimeout(() => {
+          document.body.style.transform = '';
+        }, 0);
       });
     </script>
   </head>
